--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug Report
 description: File a bug report to help us improve the project.
-labels: ["bug"]
+labels: ['bug']
 body:
   - type: markdown
     attributes:
@@ -49,9 +49,9 @@ body:
       label: Environment
       description: What environment were you using when you encountered the bug?
       options:
-        - "Web Browser (specify name and version)"
-        - "Mobile Application (specify OS and version)"
-        - "Other (please specify, including version)"
+        - 'Web Browser (specify name and version)'
+        - 'Mobile Application (specify OS and version)'
+        - 'Other (please specify, including version)'
     validations:
       required: true
 
