--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.4.0",
     "home-assistant-js-websocket": "^9.5.0",
+    "markdownlint-cli2": "^0.18.1",
     "prettier": "^3.5.3",
     "superstruct": "^2.0.2",
     "ts-loader": "^9.5.2",
@@ -46,6 +47,9 @@
     "webpack-cli": "^6.0.1"
   },
   "scripts": {
+    "mkdocs:serve": "mkdocs serve",
+    "lint:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\"",
+    "fix:md": "markdownlint-cli2 \"**/*.md\" \"#node_modules\" \"#dist\" \"#build\" --fix",
     "build-dev": "webpack --config webpack.dev.config.ts",
     "build": "webpack",
     "bump": "bump --preid alpha package.json package-lock.json README.md ./src/mushroom-strategy.ts"
