--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,9 +1,11 @@
 name: Deploy Documentation
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
+#  push:
+#    branches:
+#      - main
 #  pull_request:
 #    branches:
 #      - main
